apps/kubernetes-dashboard/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: http
  hostnames:
  - "kdash.mgmt.sholdee.net"
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-https
  namespace: kubernetes-dashboard
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: https
  hostnames:
  - "kdash.mgmt.sholdee.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /auth
    backendRefs:
    - name: kubernetes-dashboard-auth
      namespace: kubernetes-dashboard
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: kubernetes-dashboard-api
      namespace: kubernetes-dashboard
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /metrics
    backendRefs:
    - name: kubernetes-dashboard-metrics-scraper
      namespace: kubernetes-dashboard
      port: 8000
  - backendRefs:
    - name: kubernetes-dashboard-web
      namespace: kubernetes-dashboard
      port: 8000
